still working on safari issues

--- a/static/css/courses.css
+++ b/static/css/courses.css
@@ -137,6 +137,7 @@ select{
     border-radius: 3px;
     -webkit-border-radius:0px;
     font-family: 'Open Sans';
+    background-color: white;
 }
 
 .space{
